--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,70 +1,72 @@
 body {
-  background-color: #617389;
+  /*background-color: #516b8d;
+  margin: 0;*/
+background-color: #00dbeb;
+background-image: url("https://www.transparenttextures.com/patterns/black-linen.png");
+margin-bottom: 
 }
 
 h1 {
-  color: navy;
-  margin-left: 20px;
+  
 }
 
-.navbar {
-  overflow: hidden;
-  background-color: #333;
+#page {
+	background-color: white; 
+	width: 85%;
+	margin-top: 2.25%;
+	margin-bottom: 2.5%;
+}
+
+#boxshadow {
+  box-shadow: 1px 4px 8px rgba(0, 0, 0, .75);
+  border: 1px solid #294569;
+  border-style: inset;
+}
+
+.nav{
+    list-style:none;
+    margin:0;
+    padding:0;
+    text-align:center;
+    /*background-color: #333;
   font-family: Arial, Helvetica, sans-serif;
-}
-
-.navbar a {
-  float: left;
-  font-size: 16px;
-  color: white;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-}
-
-.dropdown {
-  float: left;
-  overflow: hidden;
-}
-
-.dropdown .dropbtn {
-  cursor: pointer;
-  font-size: 16px;  
-  border: none;
-  outline: none;
-  color: white;
-  padding: 14px 16px;
-  background-color: inherit;
-  font-family: inherit;
-  margin: 0;
-}
-
-.navbar a:hover, .dropdown:hover .dropbtn, .dropbtn:focus {
-  background-color: red;
-}
-
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #f9f9f9;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
-}
-
-.dropdown-content a {
-  float: none;
+  background-image: linear-gradient(to right, #294569,#0c223f,#294569,#0c223f,#294569);*/
+  background-color: white;
   color: black;
-  padding: 12px 16px;
+  text-decoration-color: black;
+width: 1160px;
+}
+.nav li{
+    display:inline;
+}
+.nav a{
+    display:inline-block;
+    padding:10px;
+    font-size: 16px;
+  color: white;
   text-decoration: none;
-  display: block;
-  text-align: left;
+
 }
 
-.dropdown-content a:hover {
-  background-color: #ddd;
+.nav a:hover, .dropdown:hover .dropbtn, .dropbtn:focus {
+  background-color: #d2dce9;
+  color: black;
 }
 
-.show {
-  display: block;
+.hero-image {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/circuit_banner.jpg");
+  height: 273px;
+  width: 1160px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
+
+.hero-text {
+  text-align: center;
+  top: 50%;
+  left: 50%;
+  color: white;
+  margin-top: 2.5%;
+}
+
