--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,13 +1,21 @@
 body {
-  /*background-color: #516b8d;
-  margin: 0;*/
-background-color: #00dbeb;
-background-image: url("https://www.transparenttextures.com/patterns/black-linen.png");
-margin-bottom: 
+	background-color: #00dbeb;
+	background-image: url("https://user-images.githubusercontent.com/31483647/55678086-f68ed900-58c1-11e9-81d8-2ae7d3eb07a7.png");
+	margin-bottom: 
 }
 
 h1 {
   
+}
+
+p {
+	width: 1160px;
+}
+
+hr {
+	height: 2px;
+	border: none;
+	background-color: #D3D3D3;
 }
 
 #page {
@@ -15,51 +23,52 @@ h1 {
 	width: 85%;
 	margin-top: 2.25%;
 	margin-bottom: 2.5%;
+	box-shadow: 1px 4px 8px rgba(0, 0, 0, .75);
+  	border: 1px solid #294569;
+  	border-style: inset;
 }
 
 #boxshadow {
-  box-shadow: 1px 4px 8px rgba(0, 0, 0, .75);
-  border: 1px solid #294569;
-  border-style: inset;
+  	box-shadow: 1px 4px 8px rgba(0, 0, 0, .75);
+  	border: 1px solid #294569;
+  	border-style: inset;
 }
 
-.nav{
+.nav {
     list-style:none;
-    margin:0;
     padding:0;
     text-align:center;
-    /*background-color: #333;
-  font-family: Arial, Helvetica, sans-serif;
-  background-image: linear-gradient(to right, #294569,#0c223f,#294569,#0c223f,#294569);*/
-  background-color: white;
-  color: black;
-  text-decoration-color: black;
-width: 1160px;
+	background-color: white;
+  	color: black;
+  	text-decoration-color: black;
+	width: 1160px;
 }
-.nav li{
+.nav li {
     display:inline;
 }
-.nav a{
+.nav a {
     display:inline-block;
-    padding:10px;
-    font-size: 16px;
-  color: white;
-  text-decoration: none;
+    padding: 10px;
+    font-size: 20px;
+  	color: #33cccc;
+  	text-decoration: none;
 
 }
 
-.nav a:hover, .dropdown:hover .dropbtn, .dropbtn:focus {
-  background-color: #d2dce9;
-  color: black;
+.nav a:hover {
+  	background-color: #d2dce9;
+  	color: black;
 }
 
 .hero-image {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/circuit_banner.jpg");
-  height: 273px;
-  width: 1160px;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
+ 	background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("https://user-images.githubusercontent.com/31483647/55677909-d9a4d680-58be-11e9-92c2-7b8c008fabb6.jpg");
+  	height: 273px;
+  	width: 1160px;
+  	background-position: center;
+  	background-repeat: no-repeat;
+ 	background-size: cover;
+ 	margin-top: 2.25%;
+ 	margin-bottom: 2.25%;
 }
 
 .hero-text {
@@ -67,6 +76,5 @@ width: 1160px;
   top: 50%;
   left: 50%;
   color: white;
-  margin-top: 2.5%;
 }
 
